--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://split-front-teal.vercel.app/",
+  "url": "https://split-front-teal.vercel.app/groups",
   "name": "Split!",
   "iconUrl": "https://raw.githubusercontent.com/Ton-Split/tonconnect-manifest/main/split_logo.png",
   "termsOfUseUrl": "https://ton-connect.github.io/demo-dapp-with-backend/terms-of-use.txt",
